# codecrafters-bittorrent-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  bittorent-by-dimka.spec  build_rpm.sh
debian/: changelog  control
src/: client.cpp  client.hpp  main.cpp  tests.cpp  torrent.cpp  torrent.hpp
src/bencode/: consts.hpp  decoders.cpp  decoders.hpp  encoders.cpp  encoders.hpp  tools.hpp  types.hpp
src/client/: client.cpp  client.hpp  download_file.cpp  download_file.hpp  piece.cpp  piece.hpp
src/decoding/: consts.hpp  decoders.cpp  decoders.hpp  tools.hpp  types.hpp
src/lib/spdlog-1.12.0/: CMakeLists.txt
src/misc/: curl.cpp  curl.hpp  parse_ip_port.hpp  sha1.hpp  tcp_transfer.hpp  url.hpp
src/peers/: deserialize.cpp  deserialize.hpp  peers.cpp  peers.hpp  serialize.cpp  serialize.hpp  types.hpp  utils.hpp
src/proto/: deserialize.cpp  deserialize.hpp  proto.hpp  serialize.cpp  serialize.hpp  types.hpp  utils.hpp
tests/assets/: congratulations.gif.torrent
